rust/macros/tests/invalid/target/debug/deps/single_argument_rs-34f7243618a3a8a3.d
/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/single_argument_rs-34f7243618a3a8a3.rmeta: single-argument.rs

/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/single_argument_rs-34f7243618a3a8a3.d: single-argument.rs

single-argument.rs:
